# SO2_h-p-cpp-hope-programming-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Pipeline.cmake  README.md
cmake/: FindRocksDB.cmake
include/: client.hpp  server.hpp
lib/cannyEdgeFilter/: CMakeLists.txt  INSTALL.md  README.md
lib/cannyEdgeFilter/src/: cannyEdgeFilter.cpp
lib/cannyEdgeFilter/tests/: CMakeLists.txt
lib/cannyEdgeFilter/tests/unit/: no_max_sup_test.cpp
lib/cppSocket/: CMakeLists.txt
lib/cppSocket/src/: cppSocket.cpp
lib/cppSocket/tests/: CMakeLists.txt
lib/cppSocket/tests/unit/: main.cpp  unitTcp_test.cpp  unitUdp_test.cpp
lib/libmodules/: CMakeLists.txt
lib/libmodules/include/: AlertInvasion.h  EmergencyNotification.h  SuppliesData.h
lib/libmodules/src/: AlertInvasion.cpp  EmergencyNotificacion.cpp  SuppliesData.cpp
lib/rocksDbWrapper/: CMakeLists.txt  LICENSE  README.md
lib/rocksDbWrapper/include/: rocksDbWrapper.hpp
lib/rocksDbWrapper/src/: rocksDbWrapper.cpp
src/: client.cpp  server.cpp
tests/: CMakeLists.txt
tests/unit/: test_unit_program.cpp
